--- a/_sass/layout/_work-with-me.scss
+++ b/_sass/layout/_work-with-me.scss
@@ -26,6 +26,8 @@ ul.services-list__details, div.services-list__details {
 }
 
 .form--contact {
+  max-width: 90%;
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
